--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "react-boilerplate",
-  "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Muchiri Njugi",
-  "license": "MIT"
+	"name": "react-boilerplate",
+	"version": "0.1.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "webpack",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "Muchiri Njugi",
+	"license": "MIT",
+	"devDependencies": {
+		"webpack": "^4.27.1",
+		"webpack-cli": "^3.1.2"
+	}
 }
