--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
-	"name": "react-boilerplate",
-	"version": "0.1.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"build": "webpack",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "Muchiri Njugi",
-	"license": "MIT",
-	"devDependencies": {
-		"webpack": "^4.27.1",
-		"webpack-cli": "^3.1.2"
-	}
+  "name": "react-boilerplate",
+  "version": "0.1.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Muchiri Njugi",
+  "license": "MIT",
+  "devDependencies": {
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dinobambino7/react-boilerplate.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/dinobambino7/react-boilerplate/issues"
+  },
+  "homepage": "https://github.com/dinobambino7/react-boilerplate#readme"
 }
