--- a/package.json
+++ b/package.json
@@ -1,39 +1,67 @@
 {
-	"name": "react-boilerplate",
-	"version": "0.1.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"build": "webpack --config webpack.config.prod.js",
-		"dev": "webpack-dev-server --config webpack.config.dev.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "Muchiri Njugi",
-	"license": "MIT",
-	"devDependencies": {
-		"@babel/cli": "^7.2.0",
-		"@babel/core": "^7.2.2",
-		"@babel/preset-env": "^7.2.0",
-		"@babel/preset-react": "^7.0.0",
-		"babel-loader": "^8.0.4",
-		"html-webpack-plugin": "^3.2.0",
-		"webpack": "^4.27.1",
-		"webpack-cli": "^3.1.2",
-		"webpack-dev-server": "^3.1.10",
-		"webpack-merge": "^4.1.5"
-	},
-	"dependencies": {
-		"prop-types": "^15.6.2",
-		"react": "^16.6.3",
-		"react-dom": "^16.6.3"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/dinobambino7/react-boilerplate.git"
-	},
-	"keywords": [],
-	"bugs": {
-		"url": "https://github.com/dinobambino7/react-boilerplate/issues"
-	},
-	"homepage": "https://github.com/dinobambino7/react-boilerplate#readme"
+   "name": "react-boilerplate",
+   "version": "0.1.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "build": "webpack --config webpack.config.prod.js",
+      "dev": "webpack-dev-server --config webpack.config.dev.js",
+      "dev:hot": "npm run dev -- --hot",
+      "test": "jest",
+      "format": "pretty-quick",
+      "lint": "eslint ./"
+   },
+   "husky": {
+      "hooks": {
+         "pre-commit": "pretty-quick --staged && npm run lint && npm run test"
+      }
+   },
+   "author": "Muchiri Njugi",
+   "license": "MIT",
+   "devDependencies": {
+      "@babel/cli": "^7.2.0",
+      "@babel/core": "^7.2.2",
+      "@babel/plugin-proposal-class-properties": "^7.2.1",
+      "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+      "@babel/preset-env": "^7.2.0",
+      "@babel/preset-react": "^7.0.0",
+      "babel-core": "^7.0.0-bridge.0",
+      "babel-eslint": "^10.0.1",
+      "babel-jest": "^23.6.0",
+      "babel-loader": "^8.0.4",
+      "babel-plugin-dynamic-import-node": "^2.2.0",
+      "css-loader": "^2.0.1",
+      "eslint": "^5.10.0",
+      "eslint-plugin-jsx-a11y": "^6.1.2",
+      "eslint-plugin-react": "^7.11.1",
+      "html-webpack-plugin": "^3.2.0",
+      "husky": "^1.2.1",
+      "jest": "^23.6.0",
+      "jest-dom": "^3.0.0",
+      "prettier": "^1.15.3",
+      "pretty-quick": "^1.8.0",
+      "react-testing-library": "^5.4.0",
+      "style-loader": "^0.23.1",
+      "webpack": "^4.27.1",
+      "webpack-bundle-analyzer": "^3.0.3",
+      "webpack-cli": "^3.1.2",
+      "webpack-dev-server": "^3.1.10",
+      "webpack-merge": "^4.1.5"
+   },
+   "dependencies": {
+      "@babel/polyfill": "^7.0.0",
+      "prop-types": "^15.6.2",
+      "react": "^16.6.3",
+      "react-dom": "^16.6.3",
+      "react-hot-loader": "^4.6.1"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/dinobambino7/react-boilerplate.git"
+   },
+   "keywords": [],
+   "bugs": {
+      "url": "https://github.com/dinobambino7/react-boilerplate/issues"
+   },
+   "homepage": "https://github.com/dinobambino7/react-boilerplate#readme"
 }
