--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
       "jest-dom": "^3.0.0",
       "prettier": "^1.15.3",
       "pretty-quick": "^1.8.0",
+      "react-axe": "^3.0.2",
       "react-testing-library": "^5.4.0",
       "style-loader": "^0.23.1",
       "webpack": "^4.27.1",
