--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "@babel/plugin-syntax-dynamic-import": "^7.2.0",
       "@babel/preset-env": "^7.2.0",
       "@babel/preset-react": "^7.0.0",
+      "autoprefixer": "^9.4.3",
       "babel-core": "^7.0.0-bridge.0",
       "babel-eslint": "^10.0.1",
       "babel-jest": "^23.6.0",
@@ -38,10 +39,15 @@
       "husky": "^1.2.1",
       "jest": "^23.6.0",
       "jest-dom": "^3.0.0",
+      "mini-css-extract-plugin": "^0.5.0",
+      "node-sass": "^4.11.0",
+      "postcss-color-mod-function": "^3.0.3",
+      "postcss-loader": "^3.0.0",
       "prettier": "^1.15.3",
       "pretty-quick": "^1.8.0",
       "react-axe": "^3.0.2",
       "react-testing-library": "^5.4.0",
+      "sass-loader": "^7.1.0",
       "style-loader": "^0.23.1",
       "webpack": "^4.27.1",
       "webpack-bundle-analyzer": "^3.0.3",
