--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
       "dev:hot": "npm run dev -- --hot",
       "test": "jest",
       "format": "pretty-quick",
-      "lint": "eslint ./"
+      "lint": "eslint ./",
+      "typeCheck": "flow"
    },
    "husky": {
       "hooks": {
@@ -24,6 +25,7 @@
       "@babel/plugin-proposal-class-properties": "^7.2.1",
       "@babel/plugin-syntax-dynamic-import": "^7.2.0",
       "@babel/preset-env": "^7.2.0",
+      "@babel/preset-flow": "^7.0.0",
       "@babel/preset-react": "^7.0.0",
       "autoprefixer": "^9.4.3",
       "babel-core": "^7.0.0-bridge.0",
@@ -35,6 +37,7 @@
       "eslint": "^5.10.0",
       "eslint-plugin-jsx-a11y": "^6.1.2",
       "eslint-plugin-react": "^7.11.1",
+      "flow-bin": "^0.89.0",
       "html-webpack-plugin": "^3.2.0",
       "husky": "^1.2.1",
       "jest": "^23.6.0",
